test/tests/stages/18_structures/invalid_types/extra_credit/other_features/compound_assign_struct_rval.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(100)
  ;
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(100)
  }
  ;
  identifier(i)
  +=
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
